--- a/css/style1.css
+++ b/css/style1.css
@@ -93,14 +93,14 @@ a{text-decoration: none;}
 	width: calc(100% - 120px);
 	font-size: 1.1rem;
 }
-.main form button{
+.main button{
 	display: block;
 	width: 300px; height: 50px;
 	margin: 50px auto 0;
 	background: #6f2d91;
 	border-color: #6f2d91;
 }
-.main form button:hover{
+.main button:hover{
 	background: #9981bb;
 	border-color: #9981bb;
 }
@@ -108,7 +108,7 @@ a{text-decoration: none;}
 table{
 	table-layout: fixed;
 	width: 868px;
-	margin: 80px auto;
+	margin: 80px auto 0;
 }
 table .col01{
 	width: 20%;
